<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/booksFragment">
    <fragment
        android:id="@+id/booksFragment"
        android:name="com.yts.ytscleanarchitecture.presentation.ui.books.BooksFragment"
        android:label="BooksFragment"
        tools:layout="@layout/fragment_books">
        <action
            android:id="@+id/action_booksFragment_to_bookDetailFragment"
            app:destination="@id/bookDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/bookDetailFragment"
        android:name="com.yts.ytscleanarchitecture.presentation.ui.bookdetail.BookDetailFragment"
        android:label="bookDetailFragment"
        tools:layout="@layout/fragment_book_detail" />
</navigation>