...
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_title">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:hint="@string/search_hint"
                android:imeOptions="actionDone"
                android:inputType="text"
...
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_close_black_16dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_book"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingTop="8dp"
            android:paddingBottom="16dp"
            android:visibility="gone"
...
